2004-09-03 10:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxsurf_) added. API changed.
	* src/gridmpi.c (gridParallelRelaxNegativeFaceAreaUV) added.
	* src/gridcad.c (gridSmoothNodeFaceAreaUV) kick out if on edge node.
	
2004-09-03 13:36 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridSmoothNodeFaceAreaUV) general routine for
	modifying node location for improving small (negative) face area
	in UV parameters. (only calls gridSmoothNodeFaceAreaUVSimplex now)
	* src/gridcad.c (gridSmoothNodeFaceAreaUVSimplex) Simplex optimization
	for improving small (negative) face area in UV parameters.
	
2004-09-02 17:05 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridMinFaceAreaUV) added to compute min face area
	in UV space around a node.
	
2004-09-02 16:35 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (gridFaceAreaUV) added to compute face area in UV
	space
	
2004-09-02 15:55 Bill Jones <w.t.jones@larc.nasa.gov>

	* src/gridcad.c (nearestOnFace,nearestOnEdge) added to apply
	CAPRI displacement matrix prior to projection.
	* src/FAKEGeomExtras.c added mock CADGeom_DisplacementIsIdentity,
	CADGeom_UnMapPoint, CADGeom_MapPoint

2004-08-31 22:31 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxneg_) API change to add an
	argument to control if surface nodes are moved.
	* src/gridmpi.c (gridParallelRelaxNegativeCells) added 
	smoothOnSurface argument.
	* src/gridcad.c (gridSmoothVolumeNearNode) added smoothOnSurface
	argument.

2004-08-31 20:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolume) added
	gridSmoothNodeVolumeWithSurf. To allow volume improvement of
	invalid surface meshes to make them vaild.

2004-08-31 19:50 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolumeWithSurf) added. Note that
	using this single gradient and line sreach method failed in a
	number of cases. It needs to be replaced with congigent gradient.
